# web_server

./: .gitignore  .gitmodules  README.md  TODO  compile.sh  compile_commands.json  developing.h  example2.html  experimental.h  index.html  main.cpp  server  server.cpp  server.h  test_binary_server  test_code.js  web_server.cpp  web_server.h  ws_client_test  ws_client_test.cpp  ws_test_output.txt
src/: CMakeLists.txt  main.cpp
src/common/: utility.cpp
src/cpp/: callbacks.cpp  server.cpp  utility.cpp  web_server.cpp  wolfssl_callbacks.cpp
src/cpp/server/: server_base.cpp  server_non_tls.cpp  server_tls.cpp
src/header/: callbacks.h  data_store.h  server.h  server_metadata.h  utility.h  web_server.h
src/header/web_server/: cache.h  central_web_server.h  common_structs_enums.h  web_server.h
src/helper/: utility.cpp
src/tcc/: callbacks.tcc
src/tcc/server/: server_base.tcc
src/tcp_server/: server_base.tcc  server_non_tls.cpp  server_tls.cpp  wolfssl_callbacks.cpp
src/web_server/: callbacks.tcc  central_web_server.cpp  web_server.cpp  web_server.tcc  websockets.cpp  websockets.tcc
wolfssl_with_io_uring/: fullchain.cer  server  server.cpp  website.key
